Changed High_BP and Low_BP variables to Systolic_BP and Diastolic_BP

--- a/templates/home.html
+++ b/templates/home.html
@@ -180,12 +180,12 @@
             </div>
 
             <div class="form-group">
-                <label for="high_bp">High Blood Pressure (mm Hg)</label>
+                <label for="high_bp">Systolic Blood Pressure (mm Hg)</label>
                 <input class="form-control" type="number" id="high_bp" name="high_bp" placeholder="Enter your High BP (systolic)" required />
             </div>
 
             <div class="form-group">
-                <label for="low_bp">Low Blood Pressure (mm Hg)</label>
+                <label for="low_bp">Diastolic Blood Pressure (mm Hg)</label>
                 <input class="form-control" type="number" id="low_bp" name="low_bp" placeholder="Enter your Low BP (diastolic)" required />
             </div>
 
